--- a/less/home-page.less
+++ b/less/home-page.less
@@ -8,6 +8,7 @@
   width: 100%;
   padding-top: 150px;
   padding-bottom: 10px;
+  min-height: 300px;
 
   h1 {
     font-size: 3rem;
