--- a/less/resources.less
+++ b/less/resources.less
@@ -1,4 +1,7 @@
 .container.resources {
+  .hero {
+    padding-top: 0;
+  }
   .resource-categories {
     display: flex;
     flex-direction: row;
@@ -44,6 +47,7 @@
       border-style: solid;
       border-width: 2px;
       border-color: @tertiary-color;
+      flex-direction: column;
 
       h2 {
         margin-block-start: 0;
